--- a/gb/20/12/14/n12618628.md
+++ b/gb/20/12/14/n12618628.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lutfah357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/lutfah357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/lutfah357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lutfah357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lutfah357/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lutfah357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lutfah357/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lutfah357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>经费尚缺320万  “宝贝家园”急募消防设备经费</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/474178-600x400.jpg" />
 <h6>桃园市长郑文灿也参与“预建宝贝 看见希望”2020宝贝感恩餐会。（宝贝潜能发展中心提供）
 </h6>
 <hr>
-<p>【大纪元2020年12月14日讯】（大纪元记者徐乃义台湾桃园报导）宝贝潜能发展中心自102年起展开“宝贝家园”计划，借此扩大身障者服务项目与人数，宝贝家园目前正迈入最后一期工程。受疫情影响，捐款大幅锐减，募款的进度赶不上筑家的速度，最关乎身心障碍者安全的<ahref="https://github.com/lutfah357/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E8%AE%BE%E5%A4%87.md#1">消防设备</a>，经费尚缺320万元。</p>
-<figure id="attachment_12618631" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/12/474179.jpg"><img class="size-medium wp-image-12618631" src="https://i.epochtimes.com/assets/uploads/2020/12/474179-450x292.jpg" alt="" width="450" b="292" /></a><figcaption class="wp-caption-text">宝贝家园现况。（宝贝潜能发展中心提供）</figcaption></figure>
-<p>14日举办“预建宝贝 看见希望”2020宝贝感恩餐会，身心障碍宝贝展示了学习的成果，勇宝贝们制作了贝倍塔及豆助茶于现场义卖，小宝贝们也透过了鼓声及艺术创作展现学习成果。感谢志倢科技股份有限公司、万岱丰食品股份有限公司、桃园凤凰扶轮社、桃园市生香文教关怀协会、桃园市自在狮子会、米格国际及友达光电到现场支持，一同抛砖引玉，协助募集<ahref="https://github.com/lutfah357/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E8%AE%BE%E5%A4%87.md#1">消防设备</a>经费，呼吁大众一同支持，期盼能在年底募集完毕，让最重要的消防设备工程能顺利完成。</p>
-<figure id="attachment_12618632" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/12/474180.jpg"><img class="size-medium wp-image-12618632" src="https://i.epochtimes.com/assets/uploads/2020/12/474180-450x222.jpg" alt="" width="450" b="222" /></a><figcaption class="wp-caption-text">慢飞宝贝表演。（宝贝潜能发展中心提供）</figcaption></figure>
+<p>【大纪元2020年12月14日讯】（大纪元记者徐乃义台湾桃园报导）宝贝潜能发展中心自102年起展开“宝贝家园”计划，借此扩大身障者服务项目与人数，宝贝家园目前正迈入最后一期工程。受疫情影响，捐款大幅锐减，募款的进度赶不上筑家的速度，最关乎身心障碍者安全的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E8%AE%BE%E5%A4%87.md#1">消防设备</a>，经费尚缺320万元。</p>
+<figure id="attachment_12618631" aria-describedby="caption-attachment-12618631" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/474179.jpg"><img class="size-medium wp-image-12618631" src="https://i.epochtimes.com/assets/uploads/2020/12/474179-450x292.jpg" alt="" width="450" b="292" /></a><figcaption id="caption-attachment-12618631" class="wp-caption-text">宝贝家园现况。（宝贝潜能发展中心提供）</figcaption></figure>
+<p>14日举办“预建宝贝 看见希望”2020宝贝感恩餐会，身心障碍宝贝展示了学习的成果，勇宝贝们制作了贝倍塔及豆助茶于现场义卖，小宝贝们也透过了鼓声及艺术创作展现学习成果。感谢志倢科技股份有限公司、万岱丰食品股份有限公司、桃园凤凰扶轮社、桃园市生香文教关怀协会、桃园市自在狮子会、米格国际及友达光电到现场支持，一同抛砖引玉，协助募集<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B6%88%E9%98%B2%E8%AE%BE%E5%A4%87.md#1">消防设备</a>经费，呼吁大众一同支持，期盼能在年底募集完毕，让最重要的消防设备工程能顺利完成。</p>
+<figure id="attachment_12618632" aria-describedby="caption-attachment-12618632" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/12/474180.jpg"><img class="size-medium wp-image-12618632" src="https://i.epochtimes.com/assets/uploads/2020/12/474180-450x222.jpg" alt="" width="450" b="222" /></a><figcaption id="caption-attachment-12618632" class="wp-caption-text">慢飞宝贝表演。（宝贝潜能发展中心提供）</figcaption></figure>
 <p>宝贝潜能发展中心服务身心障碍幼童迄今超过15年，发现许多身心障碍者离开教育体系后，长期待在家中而逐渐退化。为了避免此情景，中心自102年开始筹资购地，于八德茄苳路上建造700多坪的宝贝家园，未来将服务提升至15岁以上的身心障碍者，以培养他们生活自立的能力，解决身障家庭面临的困境，减少社会成本产生。</p>
 <p>宝贝潜能发展中心主任陈美谷表示，“宝贝家园”乘载许多慢飞宝贝的希望，建造工程已经进入最后一期，目前急需完善的消防安全设备，但设备经费仍缺320万，为了保障众多师生的人身安全，宝贝中心发起“捐款1000元，担任宝贝消防员”活动，恳请大家爱心支持，打造一个让身障者无后顾之忧的学习环境。连络电话(03)332-9319#213，邮政划拨：19907568。◇</p>
 <p>责任编辑：李悦</p>
@@ -18,48 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/7/3/n12229744.md#1">国际大厂捐赠窗框涂料  为身障者开一扇希望窗</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/8/21/n12347997.md#1">消防设备商假宣导真推销 台消防署：勿上当受骗</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/9/3/n12377400.md#1">豆菓塔试吃 品尝身障勇宝贝亲手制作的豆菓塔</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/11/11/n12541048.md#1">幸福太阳公益活动 暖心友爱共游勇气大喷发</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/11/12/n12544468.md#1">台“消防设备人员法”草案通过 无照执业最高罚百万</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/7/n12600253.md#1">桃园青年体验学习园区公益活动开跑</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/14/n12618531.md#1">圣诞送礼商机夯  冬至带动圣诞造型汤圆飙3.7倍</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/14/n12618475.md#1">输血救命也可能要命  北荣桃园分院采优质血品</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/13/n12616427.md#1">我就是代表彰化！醒吾杯全国餐旅竞赛拼校誉</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/13/n12616502.md#1">桃园市长杯传统射箭锦标赛登场 期许再创佳绩</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/3/n12229744.md#1">国际大厂捐赠窗框涂料  为身障者开一扇希望窗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/21/n12347997.md#1">消防设备商假宣导真推销 台消防署：勿上当受骗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/9/3/n12377400.md#1">豆菓塔试吃 品尝身障勇宝贝亲手制作的豆菓塔</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/11/n12541048.md#1">幸福太阳公益活动 暖心友爱共游勇气大喷发</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/11/12/n12544468.md#1">台“消防设备人员法”草案通过 无照执业最高罚百万</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/7/n12600253.md#1">桃园青年体验学习园区公益活动开跑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/26/n11478084.md#1" target="_blank">翻译家巫宁坤爱国竟受难 历劫著书留警训</a></li><li><a href="https://github.com/lutfah357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/24/n10929549.md#1" target="_blank">传奇总统里根（4）：福利改革 全美效仿</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/9/n12605810.md#1">《诸世纪》预言抽丝剥茧 掀美大选黑幕真相</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/10/n12609444.md#1">【命理】不孝子砸老母 招来雷神诛杀</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/13/n12618063.md#1">【严真点评】至暗时刻 川普胸有成竹</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/13/n12616298.md#1">【十字路口】最高院为何拒绝 川普还有王牌吗</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12615615.md#1">【薇羽看世间】川普的后盾</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/5/n12598306.md#1">【特稿】拨乱反正 宪法赋予总统特别权力</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12615033.md#1">【大选更新12.12】川粉：我们很快会大赢</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12615651.md#1">朱利安尼：川普批准进行诉讼案B计划</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/11/n12613308.md#1">韩国导演金基德染疫身亡 终年59岁</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/11/n12614307.md#1">主演电影遭AI换脸 范冰冰变身吃播网红</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/11/n12614096.md#1">因骂毛事件遭央视封杀 61岁毕福剑自喻廉颇</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/11/n12612100.md#1">BTS获选年度艺人 《TIME》：他们既专注又谨慎</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12614738.md#1">《眼泪谷之战》影评：英勇以色列装甲兵 成救国英雄！</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/10/n12608930.md#1">长白发可能是身体警讯 10种原因一定要当心</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/2/n12590520.md#1">好吃又纾压 美式燕麦软饼颠覆你的想法</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/11/n12612411.md#1">美国湖泊出现巨无霸金鱼 重达4公斤</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12615160.md#1">英军飞机拍到世界最大冰山 向南大西洋漂移</a></li>
-<li><a href="https://github.com/lutfah357/djy/blob/master/gb/20/12/12/n12615049.md#1">女子41年来为丈夫做午餐并吃一口 原因感人</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lutfah357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lutfah357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/14/n12618628.htm">经费尚缺320万  “宝贝家园”急募消防设备经费</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/14/n12618628.htm">经费尚缺320万  “宝贝家园”急募消防设备经费</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lutfah357/djy/blob/master/gb/20/12/14/n12618628.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lutfah357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lutfah357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lutfah357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lutfah357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lutfah357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/12/14/n12618628.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
